# oAuth-with-rust

./: .env  Cargo.toml  README.md  diesel.toml  testing.db
migrations/2025-01-22-035940_create_user/: up.sql
migrations/2025-01-23-034529_create_session/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/db/: db.rs
src/handlers/: mod.rs  user_handler.rs
src/handlers/middleware/: auth_middleware.rs
src/models/: jwt_model.rs  mod.rs  response_model.rs  session.rs  user_model.rs
src/routes/: mod.rs  user_routes.rs
src/utils/: bcrypt.rs  jwt.rs  mod.rs  validator.rs
