[package]
name = "outh"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
actix-web = "4"
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
validator = {version = "0.16", features= ["derive"]}
env_logger = "0.10"
log = "0.4"